--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 :root{
     --bg-color: #228311;
---primary-color: #F
+--primary-color: #F05454;
+--secundary-color: #F05454;
+--font:"Nunito Sans", sans-serif;
 }
