--- a/style.css
+++ b/style.css
@@ -4,3 +4,8 @@
 --secundary-color: #F05454;
 --font:"Nunito Sans", sans-serif;
 }
+body{
+    background-color:var(--bg-color);
+    color:var(--primary-color);
+    font-family:var(--font);
+}
